# CourseProject4

./: pyproject.toml
config/: settings.py  urls.py
mailing/: urls.py  views.py
mailing/migrations/: 0001_initial.py
mailing/templates/: base.html  home.html
mailing/templates/mailing/: mailing_confirm_delete.html  mailing_form.html  mailing_list.html  mailing_status.html  message_list.html  recipient_form.html  recipient_list.html
